feat: Configuração específica Monday.com + Google Gemini
🎯 FOCO ESPECÍFICO:
- Extensão agora é focada em Monday.com + Google Gemini
- Configurações pré-definidas para uso imediato
- Sem mais mensagem de boas-vindas - direto ao chat

🧠 GOOGLE GEMINI INTEGRADO:
- Suporte completo para Google Gemini 1.5 Flash
- API key pré-configurada: AIzaSyBKdGouQzBbm6Dwm5pyPhDt2MCUpDPGAig
- Formato de requisição/resposta específico do Gemini
- Base URL: https://generativelanguage.googleapis.com/v1beta

📋 MONDAY.COM MCP:
- Servidor MCP dedicado para Monday API
- Token pré-configurado para Monday.com
- 5 ferramentas específicas: boards, items, create, update, users
- WebSocket server em localhost:8080/mcp

✨ MUDANÇAS NA UI:
- Título alterado para 'Monday Chat'
- Labels específicos: 'Monday Token', 'Google API Key'
- Botões: 'Testar Monday', 'Testar Gemini'
- Remoção de elementos genéricos

🔧 ARQUIVOS CRIADOS/MODIFICADOS:
- monday-mcp-server.js: Servidor WebSocket para Monday API
- package.json: Scripts para Monday MCP server
- js/popup.js: Suporte Google Gemini + configs pré-definidas
- popup.html: UI específica Monday + Google
- QUICK_START.md: Guia completo Monday + Gemini

🚀 RESULTADO:
- Extensão pronta para usar (sem configuração inicial)
- Foco total em produtividade Monday.com
- Powered by Google Gemini 1.5 Flash
- Zero configuração necessária pelo usuário

--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "chrome-mcp-chat-server",
+  "name": "chrome-mcp-chat",
   "version": "1.0.0",
-  "description": "Servidor MCP de exemplo para Chrome MCP Chat Extension",
-  "main": "mcp-server-example.js",
+  "description": "Chrome extension for AI chat with MCP integration - Monday API focused",
+  "main": "monday-mcp-server.js",
   "scripts": {
-    "start": "node mcp-server-example.js",
-    "dev": "nodemon mcp-server-example.js",
+    "start": "node monday-mcp-server.js",
+    "dev": "nodemon monday-mcp-server.js",
+    "monday": "node monday-mcp-server.js",
+    "install-monday": "npm install @mondaydotcomorg/monday-api-mcp",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
+    "chrome-extension",
     "mcp",
-    "model-context-protocol",
-    "websocket",
-    "ai",
-    "chat",
-    "chrome-extension"
+    "monday.com",
+    "ai-chat",
+    "google-gemini",
+    "websocket"
   ],
-  "author": "Chrome MCP Chat Extension",
+  "author": "Eduardo Pereira <eduardo.pereira@alest.com.br>",
   "license": "MIT",
   "dependencies": {
     "ws": "^8.14.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
+  },
+  "optionalDependencies": {
+    "@mondaydotcomorg/monday-api-mcp": "latest"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/chrome-mcp-chat"
-  },
-  "bugs": {
-    "url": "https://github.com/your-username/chrome-mcp-chat/issues"
-  },
-  "homepage": "https://github.com/your-username/chrome-mcp-chat#readme"
+    "url": "https://github.com/EduPereiraAlest/McpChatAlest.git"
+  }
 }
